--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="edtLoginId">Identifiant</string>
     <string name="edtLoginPasswd">Mot de passe</string>
     <string name="btnLogin">Se connecter</string>
+    <string name="btnControl">Reprendre le contrôle</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
