Mise en place de la gestion des couleurs de l'application en fonction du theme utilise par l'appareil Android + début mise en place commentaires dans fichiers sources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="toastGo">Partez !</string>
     <string name="toastStop">STOP !</string>
     <string name="toastCSV">Exportation du CSV en cours</string>
-    <string name="btnSelect">Démarrer Session</string>
+    <string name="btnSelect">Arrêter la Session</string>
     <string name="btnPrepare">Prép.</string>
     <string name="btnAVM">AVM</string>
     <string name="btnReady">Prêt !</string>
@@ -74,7 +74,6 @@
     <string name="edtLoginPasswd">Mot de passe</string>
     <string name="btnLogin">Se connecter</string>
     <string name="btnControl">Reprendre le contrôle</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
