--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
     <string name="btnLogin">Se connecter</string>
     <string name="btnControl">Reprendre le contrôle</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="alrtbox_endsess_title">Fin de session</string>
+    <string name="alrtbox_endsess_msg">La session est terminée. Cliquez sur OK pour quitter l\'application</string>
+    <string name="endSession">Session terminée</string>
 
 </resources>
